Bug 168014 - rendering of pivot point and base point control in Position&Size dialog is wrong
Summary: rendering of pivot point and base point control in Position&Size dialog is wrong
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-08-19 16:46 UTC by Regina Henschel
Modified: 2025-08-21 12:20 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2025-08-19 16:46:27 UTC
Start Draw or Impress and insert a shape and select it.
Open the "Position and Size" dialog.

Error: The 'Base point' controls on page "Position and Size" and the 'Default settings' control for the pivot point on page "Rotation" have no markers to show which position is selected.

Tested in Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a0eb4dcd04a6d8f4a6df474f74edceb8936a3aa6
CPU threads: 32; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded
Comment 1 Regina Henschel 2025-08-19 16:49:55 UTC
The problem is both in vertical and horizontal tab mode of the dialog.
Comment 2 raal 2025-08-20 19:37:46 UTC
Confirm with Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 953a4159ba48b2901e6b1660fc89960fcaa87b0c
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 3 raal 2025-08-20 19:47:39 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-26.2$.
Adding Cc: to Noel Grandin ; Could you possibly take a look at this one?
Thanks
 d7fc0f09a2f89e1d45cab5b020d0f99ba4bda045 is the first bad commit
commit d7fc0f09a2f89e1d45cab5b020d0f99ba4bda045
Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Sun Aug 10 14:56:46 2025 +0200

    source 01a31f689fff39dfaed8864b765b89696c361b62

189284: no need to use unique_ptr for Bitmap | https://gerrit.libreoffice.org/c/core/+/189284
Comment 4 Commit Notification 2025-08-21 12:14:51 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/72d99207d2e1dece80d632283b9ed95d1203513f

tdf#168014 pivot point and base point control in Position&Size dialog is wrong

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.