tdf#168014 pivot point and base point control in Position&Size dialog is wrong

regression from
    commit 01a31f689fff39dfaed8864b765b89696c361b62
    Author: Noel Grandin <noelgrandin@gmail.com>
    Date:   Sat Aug 9 20:04:00 2025 +0200
    no need to use unique_ptr for Bitmap

Change-Id: Ie7e0972942d5835f9f5118c88f5dd2a33dfcd6f7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/189992
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins